[project]
name = "mlopszoomcamp"
version = "0.1.0"
description = "MlOpsZoomcamp 2025"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hyperopt>=0.2.7",
    "mlflow>=2.22.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupytext>=1.17.1",
]
